@@ -1,3 +1,12 @@
+Tue, 26 Feb 2008 16:49:06 +0100 <thp@perli.net>
+Python code fixup: Compare "None" with "is" instead of "=="
+
+	* doc/dev/daap2rss.py: "== None" => "is None"
+	* src/gpodder/config.py: "== None" => "is None"
+	* src/gpodder/gui.py: "== None" => "is None"
+	* src/gpodder/libgpodder.py: "== None" => "is None"
+	* src/gpodder/libpodcasts.py: "== None" => "is None"
+
 Tue, 26 Feb 2008 16:30:56 +0100 <thp@perli.net>
 Add support for new "bluetooth-sendto" utility
 
